# daily-cli

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION.md  Makefile  PROJECT_INFO.md  README.md  docker-compose.yml  example_usage.py  main.py  pyproject.toml  pyrightconfig.json  test_cli_integration.py
.github/workflows/: docker-test.yml
data/: user_preferences.json
data/writing_examples/: README.md  emotional_literary.txt
diary/: __init__.py
diary/data/: __init__.py
diary/data/repositories/: __init__.py  anthropic_client.py  file_chat_repository.py  file_credential_repository.py  file_user_preferences_repository.py  file_writing_style_examples_repository.py  google_ai_client.py  mongodb_chat_repository.py  mongodb_diary_repository.py  openai_client.py
diary/domain/: __init__.py
diary/domain/entities/: __init__.py  ai_credential.py  chat_message.py  chat_session.py  diary.py  user_preferences.py  writing_style.py
diary/domain/interfaces/: __init__.py  ai_client.py  chat_repository.py  credential_repository.py  diary_repository.py  user_preferences_repository.py  writing_style_examples_repository.py
diary/domain/services/: __init__.py  chat_service.py  credential_service.py  (+2 more)
diary/presentation/: __init__.py  api_key_ui.py  chat_ui.py  cli.py  diary_ui.py  preferences_ui.py
docs/: CHANGELOG_SECURITY.md  DIARY_MONGODB_GUIDE.md  DIARY_REPOSITORY_SUMMARY.md  MONGODB_SETUP.md  MONGODB_UPDATE_GUIDE.md  SECURITY.md
scripts/: check_env.sh  check_mongodb_status.sh  migrate_to_mongodb.py  test_mongodb_diary.py
