[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daily-cli"
version = "0.1.0"
description = "AI 일기 작성 도우미"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
]

[project.scripts]
diary = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["diary"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
